# Cardiff-University-Internship-Task

./: .gitignore  ASTHandler.py  COMSC_Plugin.py  Flake8_COMSC_Linter.py  Installation_Instructions.txt  Linter.py  MANIFEST.in  README.md  experiment_import_plugin.py  flake8_COMSC_PSP.py  requirements.txt  run.py  setup.cfg  setup.py  squash.py
Refactoring/: AST_Router.py  Unit_Testing.py
Refactoring/Errors/: P700.py  P701.py  P702.py  P703.py  P705.py  P709.py  P711.py  P713.py  P714.py  P716.py  P717.py  P718.py  P720.py  errorType.py
Squash/: gameFunction.py
ast_tool/: importFrom.py  run.py
no_tests/: .gitignore  astParser.py  e.py  no_tests.py  no_tests_Plugin.py  setup.cfg
prototype/: .gitignore  AST_Router.py  COMSC_Linter.py  Error_reporter.py  Feedback.py  P703.py  P704.py  P705.py  P709.py  P710.py  P711.py  P712.py  P719.py  P720.py  Plugin.py  Prototype.py  Squash.py  Unit_Testing.py  _PluginErrorSuperClass.py  data.csv  prototype.py  reportError.py  requirements.txt  setup.cfg
prototype/PluginErrors/: P703.py  _PluginErrorSuperClass.py  tests_blanks.py
prototype/PluginErrors/UnitTests/: P703_RtnNumber.py
prototype/tests/: test_Reporter.py  test_Unit_testing.py  test_tutorial.py  tests_blanks.py
reference/no_tests/: .gitignore  no_tests_Plugin.py  setup.cfg
reference/tutorial/: ASTHandler.py  setup.cfg
reference/tutorial/tests/: test_tutorial.py
setup/: requirements.txt  setup.cfg
src/: .gitignore  AST_Router.py  Linter.py  README.md  Unit_Testing.py  Unit_TestingV2.py  __init__.py  consoleCommands.py  errorReporter.py  pathing.py  reportError.py  sysArgParser.py
src/Axxx/: A705.py  P700.py  P701.py  P702.py  P705.py  P713.py  P714.py  P715.py  P716.py  P717.py  P718.py  _astErrorSuperClass.py
src/Errors/: .gitignore  P690.py  P700.py  P701.py  P702.py  P703.py  P704.py  P705.py  P709.py  P710.py  P711.py  P712.py  P713.py  P714.py  P716.py  P717.py  P718.py  P719.py  P720.py  P721.py  P799.py  RP01a00.py  RP01a01.py  RP01a02.py  RP01a03.py  RP01a04.py  RP01a05.py  RP01a06.py  RP01a07.py  RP01u06.py  RP01u07.py  RP01u08.py  RP01u09.py  RP01u10.py  RP01u11.py  RP01u12.py  RP02a05.py  RP02u11.py  RP02u12.py  Unit_TestingV2.py  (+4 more)
src/Errors/testData/: unitTesting.csv
src/Pxxx/: P703.py  P704.py  P705.py  P709.py  P710.py  P711.py  P712.py  P719.py  P720.py  _PluginErrorSuperClass.py
tests/: flake8_COMSC_PSP_test.py  test_P7xx.py  test_tutorial.py  testimportFromArg.py
tutorial/: setup.cfg
tutorial/COMSC_Plugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
