[metadata]

# Data about the data concerning the program
#
#

name = COMSC_Plugin
version = 0.1.2


[options]

# Setup options for running Flake8
# Specifies minimum installation requirements, and the modules being used
#

py_modules = COMSC_Plugin
install_requires =
  flake8>=3.7
  importlib-metadata>=0.9;python_version<"3.9"
python_requires = >=3.9


[options.entry_points]

# Utilises python setuptools entry_points
#
#

flake8.extension =
   X1=COMSC_Plugin:Plugin
