[metadata]
# Data about the data concerning the program

name = Linter
version = 0.1.1


[options]
# Setup options for running Flake8
# Specifies minimum installation requirements, and the modules being used

py_modules = Linter

install_requires =
  flake8>=3.7
  importlib-metadata>=0.9;python_version<"3.9"

python_requires = >=3.9

package_dir =
  = src
packages = find:

[options.packages.find]
where=src

[options.entry_points]
# Utilises python setuptools entry_points

flake8.extension =
   P = Linter:Plugin

[flake8]
# Ignore specific / groups of error codes
# Various other settings

ignore = F402, F403, F404, F405, F406, F407,
    F501, F502, F503, F504, F505, F506, F507, F508, F509,
    F521, F522, F523, F524, F525,
    F601, F602,
    F621, F622,
    F631, F633, F634,
    F701, F702, F703, F704, F705, F707,
    F721, F722, F723,
    F821, F822,
    F901,
    E999,
    C901

# exclude = ###
