[metadata]

# Data about the data concerning the program
#
#

name = Prototype
version = 0.1.0


[options]

# Setup options for running Flake8
# Specifies minimum installation requirements, and the modules being used
#

py_modules = Prototype
install_requires =
  flake8>=3.7
  importlib-metadata>=0.9;python_version<"3.9"
python_requires = >=3.9


[options.entry_points]

# Utilises python setuptools entry_points
#
#

flake8.extension =
   P = Prototype:Plugin

[flake8]
# Ignore specific / groups of error codes
# Various other settings

# ignore =
# max-line-length = 160
exclude = tests/*
max-complexity = 10
